[package]
name = "rs_ncdao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eosio = "0.3.1"
serde = {version = "1.0.152", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime

futures = "0.3"
