[package]
name = "rs_ncdao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eosio = "0.3.1"
serde = {version = "1.0.152", features = ["derive"]}
reqwest = { version = "0.11.14", features = ["blocking","json"] }
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime

futures = "0.3"
once_cell = "1.17.0"
sha256 = "1.1.2"
sha2 = "0.10.6"
flate2 = "1.0.25"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
